# agency-ai-orchestrator

./: .env.example  .gitignore  ADMIN_TASK_PARITY.md  AGENTS.md  ATTACHMENT_UPLOAD_FIX.md  CLIENT_ID_SANITIZATION.md  ENRICHMENT_DEPLOYMENT_GUIDE.md  ENRICHMENT_IMPLEMENTATION_SUMMARY.md  ENRICHMENT_TEST_PLAN.md  ENRICHMENT_TEST_RESULTS.md  Example client requests.md  FEATURE-improve-validator.md  FEATURE-request-pre-check.md  LANGFUSE_PROMPTS_GUIDE.md  README.md  cleanup_demo_task.sh  demo_workflow.py  diagnose_langfuse.py  nixpacks.toml  pyproject.toml  render.yaml  requirements.txt  test_attachment_upload.py  test_enrichment_e2e.py  test_evaluator.py  test_priority_integration.py  test_prompt.py  test_request_validator.py  test_review.py  test_scraping.py  test_url_sanitization.py  verification.py  workflow_log_5c319189-97cc-46dd-af41-58c064847c9a.json
agency_ai_orchestrator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
app/: __init__.py  _compat.py  graph.py  main.py  state.py
app/agents/: architect.py  dynamic_enrichment.py  request_validator.py  review.py
app/domain/: enrichment_models.py  evaluator.py  prompt_manager.py  request_category.py
app/evals/: __init__.py  input_eval.py  output_eval.py
app/services/: clickup.py  enrichment_toolkit.py  form_detector.py  google_drive.py  google_maps_scraper.py  google_reviews_scraper.py  image_analysis.py  mock_google_drive.py  pdf_extractor.py  seo_audit.py  social_media_finder.py  web_scraper.py  (+1 more)
test_files/: test.docx  test_file_generator.py
tests/: test_enrichment_workflow.py
tools/: find_clickup_ids.py
(+2 files in other folders)
